capturas de pantallas

--- a/Predicciones.ipynb
+++ b/Predicciones.ipynb
@@ -2,33 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import layers\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import LabelEncoder"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{'capa_activacion': 'relu', 'optimizador': 'Adagrad', 'num_capas': 3, 'num_neuronas': 16, 'learning_rate': 0.1, 'batchs': 32}\n",
-    "\n",
-    "La precisión fue de:  0.9200000166893005\n",
-    "\n",
-    "La pérdida fue de:  0.19595186412334442"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -2798,16 +2771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 39ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 114ms/step\n",
       "El Paris Saint-Germain ganará el partido de ida con un resultado de\n",
-      "PSG 2 - 1 Barcelona\n"
+      "PSG 3 - 2 Barcelona\n"
      ]
     }
    ],
@@ -2918,16 +2891,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
       "El Paris Saint-Germain ganará el partido de vuelta con un resultado de\n",
-      "PSG 5 - 0 Barcelona\n"
+      "PSG 5 - 3 Barcelona\n"
      ]
     }
    ],
@@ -3052,14 +3025,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 34ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n",
       "El Borussia Dortmund ganará el partido de ida con un resultado de\n",
       "Atletico de Madrid 0 - 2 Borussia Dortmund\n"
      ]
@@ -3175,14 +3148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
       "El Borussia Dortmund ganará el partido de vuelta con un resultado de\n",
       "Borussia Dortmund 1 - 0 Atletico de Madrid\n"
      ]
@@ -3312,16 +3285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 33ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
       "El Bayern Munich ganará el partido de ida con un resultado de\n",
-      "Arsenal 2 - 3 Bayern Munich\n"
+      "Arsenal 0 - 1 Bayern Munich\n"
      ]
     }
    ],
@@ -3435,16 +3408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step\n",
       "El Bayern Munich ganará el partido de vuelta con un resultado de\n",
-      "Bayern Munich 2 - 0 Arsenal\n"
+      "Bayern Munich 2 - 1 Arsenal\n"
      ]
     }
    ],
@@ -3572,16 +3545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 33ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 71ms/step\n",
       "El Real Madrid ganará el partido de ida con un resultado de\n",
-      "Real Madrid 5 - 3 Manchester City\n"
+      "Real Madrid 3 - 0 Manchester City\n"
      ]
     }
    ],
@@ -3695,16 +3668,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 33ms/step\n",
       "El Manchester City ganará el partido de vuelta con un resultado de\n",
-      "Manchester City 4 - 2 Real Madrid\n"
+      "Manchester City 4 - 3 Real Madrid\n"
      ]
     }
    ],
@@ -3839,9 +3812,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 32ms/step\n",
+      "El partido de ida terminará en empate con un resultado de\n",
+      "Borussia Dortmund 1 - 1 Paris Saint-Germain\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -3952,9 +3935,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 33ms/step\n",
+      "El Paris Saint-Germain ganará el partido de vuelta con un resultado de\n",
+      "Paris Saint-Germain 2 - 1 Borussia Dortmund\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -4064,10 +4057,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Por lo tanto el PSG pasa a la final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real Madrid VS Bayern Munich"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 31ms/step\n",
+      "El partido de ida terminará en empate con un resultado de\n",
+      "Bayern Munich 1 - 1 Real Madrid\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -4178,9 +4195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 30ms/step\n",
+      "El Real Madrid ganará el partido de vuelta con un resultado de\n",
+      "Real Madrid 3 - 0 Bayern Munich\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -4287,6 +4314,129 @@
     "        if goles_equipo_local_simulados[i] < goles_equipo_visitante_simulados[i]:\n",
     "            print(f\"{nombre_equipo_local}\", goles_equipo_local_simulados[i], \"-\", goles_equipo_visitante_simulados[i], nombre_equipo_visitante)\n",
     "            break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por lo tanto pasa el Real Madrid a la final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 32ms/step\n",
+      "El Real Madrid ganará el partido de vuelta con un resultado de\n",
+      "Paris Saint-Germain 1 - 2 Real Madrid\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_equipo_final_1 = 'Paris Saint-Germain'\n",
+    "nombre_equipo_final_2 = 'Real Madrid'\n",
+    "\n",
+    "# Seleccionar solo las columnas numéricas\n",
+    "data_numeric = data.select_dtypes(include='number')\n",
+    "\n",
+    "# Filtrar los partidos del equipo visitante\n",
+    "datos_equipo_final_1 = data_numeric[data['Away Team'] == nombre_equipo_final_1].mean()\n",
+    "\n",
+    "# Filtrar los partidos del equipo visitante\n",
+    "datos_equipo_final_2 = data_numeric[data['Away Team'] == nombre_equipo_final_2].mean()\n",
+    "\n",
+    "# Calcular la media de goles para los equipos\n",
+    "media_goles_equipo_1 = (datos_equipo_final_1['Away Goals'] + datos_equipo_final_2['Away Goals']) / 2\n",
+    "media_goles_equipo_2 = (datos_equipo_final_2['Away Goals'] + datos_equipo_final_1['Away Goals']) / 2\n",
+    "\n",
+    "# Generar goles\n",
+    "num_partidos = 100  # Número de partidos para simular\n",
+    "\n",
+    "goles_equipo_visitante_simulados = generar_goles_equipo(media_goles_equipo_1, num_partidos)\n",
+    "goles_equipo_local_simulados = generar_goles_equipo(media_goles_equipo_2, num_partidos)\n",
+    "\n",
+    "\n",
+    "# Crear un diccionario con las estadísticas de los equipos para el partido a predecir\n",
+    "partido = {\n",
+    "    'Round Number': 13,\n",
+    "    'Home Team': nombre_equipo_final_1,\n",
+    "    'Away Team': nombre_equipo_final_2,\n",
+    "    'Home Goals': datos_equipo_final_1['Home Goals'],\n",
+    "    'Away Goals': datos_equipo_final_2['Away Goals'],\n",
+    "    'Home Shots': datos_equipo_final_1['Home Shots'],\n",
+    "    'Away Shots': datos_equipo_final_2['Away Shots'],\n",
+    "    'Home Shots Keeper': datos_equipo_final_1['Home Shots Keeper'],\n",
+    "    'Away Shots Keeper': datos_equipo_final_2['Away Shots Keeper'],\n",
+    "    'Home Possesion': datos_equipo_final_1['Home Possesion'],\n",
+    "    'Away Possesion': datos_equipo_final_2['Away Possesion'],\n",
+    "    'Home Passes': datos_equipo_final_1['Home Passes'],\n",
+    "    'Away Passes': datos_equipo_final_2['Away Passes'],\n",
+    "    'Home Passes Completed': datos_equipo_final_1['Home Passes Completed'],\n",
+    "    'Away Passes Completed': datos_equipo_final_2['Away Passes Completed'],\n",
+    "    'Home Tackles': datos_equipo_final_1['Home Tackles'],\n",
+    "    'Away Tackles': datos_equipo_final_2['Away Tackles'],\n",
+    "    'Home Yellow Cards': datos_equipo_final_1['Home Yellow Cards'],\n",
+    "    'Away Yellow Cards': datos_equipo_final_2['Away Yellow Cards'],\n",
+    "    'Home Red Cards': datos_equipo_final_1['Home Red Cards'],\n",
+    "    'Away Red Cards': datos_equipo_final_2['Away Red Cards'],\n",
+    "    'Home Offside': datos_equipo_final_1['Home Offside'],\n",
+    "    'Away Offside': datos_equipo_final_2['Away Offside'],\n",
+    "    'Home Corners': datos_equipo_final_1['Home Corners'],\n",
+    "    'Away Corners': datos_equipo_final_2['Away Corners']\n",
+    "}\n",
+    "\n",
+    "# Crear un DataFrame con los datos del partido\n",
+    "partido_df = pd.DataFrame(partido, index=[0])\n",
+    "\n",
+    "# Crear y ajustar el LabelEncoder para las etiquetas de equipo usando los datos de entrenamiento\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder.fit(pd.concat([data['Home Team'], data['Away Team']]))\n",
+    "\n",
+    "# Codificar las etiquetas de los equipos en el DataFrame del partido usando el mismo LabelEncoder\n",
+    "partido_df['Home Team'] = label_encoder.transform(partido_df['Home Team'])\n",
+    "partido_df['Away Team'] = label_encoder.transform(partido_df['Away Team'])\n",
+    "\n",
+    "\n",
+    "# Predecir el resultado del partido\n",
+    "partido_df_scaled = scaler.transform(partido_df)\n",
+    "prediccion = model.predict(partido_df_scaled)\n",
+    "resultado = np.argmax(prediccion) - 1\n",
+    "\n",
+    "# Imprimir el resultado\n",
+    "if resultado == 1:\n",
+    "    print(f\"El {nombre_equipo_final_1} ganará el partido de vuelta con un resultado de\")\n",
+    "    for i in range(num_partidos):\n",
+    "        if goles_equipo_local_simulados[i] > goles_equipo_visitante_simulados[i]:\n",
+    "            print(f\"{nombre_equipo_final_1}\", goles_equipo_local_simulados[i], \"-\", goles_equipo_visitante_simulados[i], nombre_equipo_final_2)\n",
+    "            break\n",
+    "elif resultado == 0:\n",
+    "    print(\"El partido de ida terminará en empate con un resultado de\")\n",
+    "    for i in range(num_partidos):\n",
+    "        if goles_equipo_local_simulados[i] == goles_equipo_visitante_simulados[i]:\n",
+    "            print(f\"{nombre_equipo_final_1}\", goles_equipo_local_simulados[i], \"-\", goles_equipo_visitante_simulados[i], nombre_equipo_final_2)\n",
+    "            break\n",
+    "else:\n",
+    "    print(f\"El {nombre_equipo_final_2} ganará el partido de vuelta con un resultado de\")\n",
+    "    for i in range(num_partidos):\n",
+    "        if goles_equipo_local_simulados[i] < goles_equipo_visitante_simulados[i]:\n",
+    "            print(f\"{nombre_equipo_final_1}\", goles_equipo_local_simulados[i], \"-\", goles_equipo_visitante_simulados[i], nombre_equipo_final_2)\n",
+    "            break\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por lo tanto el Real Madrid ganará la edición 2023-2024 de la Uefa Champions League\n",
+    "\n",
+    "![imagen](Escudos/Prediccion.png)"
    ]
   }
  ],
